--- a/config_automation.yml
+++ b/config_automation.yml
@@ -37,4 +37,4 @@ make-book-txt: true
 
 # What docker image should be used for rendering?
 # The default is jhudsl/base_ottr:main
-rendering-docker-image: 'jhudsl/base_ottr:main'
+rendering-docker-image: 'jhudsl/base_ottr:testBC'
