--- a/config_automation.yml
+++ b/config_automation.yml
@@ -27,9 +27,9 @@ url-check-periodically: true
 
 ##### Renderings run upon merge to main branch #####
 # Rendering each platform's content
-render-website: quarto
-render-leanpub: true
-render-coursera: true
+render-website: quarto_web
+render-leanpub: false
+render-coursera: false
 
 ## Automate the creation of Book.txt file? yes/no
 ## This is only relevant if render-leanpub is yes, otherwise it will be ignored
